--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-scripts": "3.4.3"
+    "react-particles-js": "3.3.0",
+    "react-scripts": "3.4.3",
+    "tachyons": "4.12.0"
   },
   "devDependencies": {
     "typescript": "3.8.3"
